# wasm-rust-demo

./: .brei_history  Cargo.toml  LICENSE_MIT  entangled.toml  mkdocs.yml  pyproject.toml
.entangled/: filedb.json  tasks.json
docs/: index.md
docs/js/: .gitignore
scripts/: build.sh  deploy.sh
src/: lib.rs
